# mkdocs

./: .gitignore  README.md  index.html  mkdocs.toml  pyproject.toml  test_mkdocs.py
.github/workflows/: test-suite.yml
configuration/: index.html
css/: highlightjs-copy.min.css
docs/: configuration.md  index.md  navigation.md  roadmap.md  styling.md  writing.md
example/: index.html
js/: theme.js
navigation/: index.html
roadmap/: index.html
scripts/: install  test
src/mkdocs/: __init__.py  __main__.py  __version__.py  cli.py  mkdocs.py  rewrite_urls.py  short_codes.py
src/mkdocs/default/css/: theme.css
src/mkdocs/default/js/: highlightjs-copy.min.js
src/mkdocs/extensions/: __init__.py  rewrite_urls.py  short_codes.py  strike_thru.py
src/mkdocs/theme/css/: theme.css
src/mkdocs/theme/templates/: base.html  pagination.html
styling/: index.html
tests/: test_mkdocs.py
writing/: index.html
