[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs"
description = "HTTP, for Python."
requires-python = ">=3.10"
authors = [
    { name = "Tom Christie", email = "tom@tomchristie.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx",
    "flask",
    "click",
    "jinja2",
    "markdown",
    "pymdown-extensions==10.16.1",
    "markdown-gfm-admonition==0.1.1",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/mkdocs/__version__.py"

[project.scripts]
mkdocs = "mkdocs:cli"
